# SovaRouter

./: .env.template  docker-compose.yml  pyproject.toml
app/: __main__.py  instances.py  keyboards.py  server.py  states.py
app/config/: db.py  keyboards.py  labels.py  messages.py
app/db/: models.py  requests.py
app/roles/: __init__.py  owner.py  user.py  worker.py
